--- a/2023/AG/notes/notes.tex
+++ b/2023/AG/notes/notes.tex
@@ -934,9 +934,46 @@ We have the following algorithm to find lines on a surface $S\subseteq\proj{3}$.
 \end{definition}
 
 \begin{definition}
-  Parametrise $\proj{2}\times\proj{1}$ by $[x:y:z],[\alpha:\beta]$. The \emph{blowup of $\proj{2}$ at
-  $[0:0:1]$} is the subset $\Bl_{[0:0:1]}\proj{2}$ define by $x\beta = \alpha y$
-  Let $\pi:\Bl_{[0:0:1]}\to\proj{2}$ and $E=\inv\pi([0:0:1])$ the \emph{exceptional curve}.
+  Parametrise $\proj{2}\times\proj{1}$ by $[x:y:z],[\alpha:\beta]$. The
+  \emph{blowup of $\proj{2}$ at $[0:0:1]$} is the subset
+  $\Bl_{[0:0:1]}\proj{2}$ defined by $x\beta = \alpha y$. Let
+  $\pi:\Bl_{[0:0:1]}\to\proj{2}$ and $E=\inv\pi([0:0:1])$ the \emph{exceptional
+  curve}.
 \end{definition}
+
+\begin{definition}
+  Let $C\subseteq\proj{2}$ be a curve. Its \emph{strict transform}
+  $\tilde C\subseteq\Bl_{[0:0:1]}\proj{2}$ is the closure of
+  $\pi(C\setminus\bb{0:0:1})$. If $\bb{0:0:1}\in C$, we call
+  $\pi:\widehat C=\Bl_{\bb{0:0:1}} C\to C$ the blowup of $C$ at
+  $\bb{0:0:1}$.
+\end{definition}
+
+\begin{proposition}
+  Let $C\subseteq\proj{2}$ be a curve and let $P\in C$ be a smooth point.
+  Then the blowup $\pi:\Bl_P C\to C$ is an isomorphism.
+\end{proposition}
+
+\begin{definition}
+  Let $Z\subseteq\affine{n}$ be a subvariety of dimension $n-k-1$ with
+  $I(Z) = (g_1,\ldots,g_k)\subseteq k\bb{x_1,\ldots,x_n}$.
+  The \emph{blowup of $\affine{n}$ with center $Z$} is the subvariety
+  $\Bl_Z\affine{n}\subseteq\affine{n}\times\proj{k}$ defined by
+  \begin{align*}
+    u_i g_j(x) - u_j g_i(x) = 0
+  \end{align*}
+  for $i\neq j$ and $\bb{u_0:\cdots:u_k}\in\proj{k}$.
+\end{definition}
+
+\subsection{Blowups at several points}
+
+\begin{proposition}
+  Suppose $P_1,\ldots,P_n\in\proj{2}$ are $n\geq 6$ points in general
+  position. Then $i:S\to\proj{9-n}$ defines $S$ as a closed subset of
+  $\proj{9-n}$. The surface has lines constructed as follows:
+  \begin{itemize}
+  \item  
+  \end{itemize}
+\end{proposition}
 
 \end{document}
